Added filtering by timeline

--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -6,14 +6,17 @@
 	<link rel="stylesheet" href="accidents_bcn_style.css">
 </head>
 <body>
-<div id="map" class="paint"></div>
-<div id="side" class="paint"></div>
+<div id="main_map"></div>
+<div id="bottom_bar_chart"></div>
 </body>
 
-<script src="https://maps.google.com/maps/api/js?sensor=true"></script>
-<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="./d3_google_maps_style.js"></script>
+<script src="./coordinates_conversion.js"></script>
+<script src="./data_filter.js"></script>
 <script src="./d3_google_maps.js"></script>
-<script src="./d3_pie_chart.js"></script>
+<script src="./d3_bottom_bar_chart.js"></script>
 
 </html>
 
