Added panel to the right subdivided for filtering and point modification
Also added files pointmod where all the coloring and size of the points
should be added.

--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -6,7 +6,13 @@
 	<link rel="stylesheet" href="accidents_bcn_style.css">
 </head>
 <body>
-<div id="main_map"></div>
+<div id="top_div">
+	<div id="main_map"></div>
+	<div id="right_panel">
+		<div id="filters_top_panel"></div>
+		<div id="pointmod_bottom_panel"></div>
+	</div>
+</div>
 <div id="bottom_bar_chart"></div>
 </body>
 
