Added import in html of the new javascript files

--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -23,6 +23,8 @@
 <script src="./data_filter.js"></script>
 <script src="./d3_google_maps.js"></script>
 <script src="./d3_bottom_bar_chart.js"></script>
+<script src="./filter_panel.js"></script>
+<script src="./pointmod_panel.js"></script>
 
 
 
