--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -13,7 +13,10 @@
 		<div id="pointmod_bottom_panel"></div>
 	</div>
 </div>
-<div id="bottom_bar_chart"></div>
+<div id="bottom_div">
+	<div id="bottom_bar_chart"></div>
+	<div id="bottom_dropdown"></div>	
+</div>
 </body>
 
 <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
