--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>Barcelona traffic accidents</title>
-	<link rel="stylesheet" href="accidents_bcn_style.css">
+<meta charset="UTF-8">
+<title>Barcelona traffic accidents</title>
+<link rel="stylesheet" href="accidents_bcn_style.css">
 </head>
 <body>
-<div id="top_div">
-	<div id="main_map"></div>
-	<div id="right_panel">
-		<div id="filters_top_panel"></div>
-		<div id="pointmod_bottom_panel"></div>
+	<div id="top_div">
+		<div id="main_map"></div>
+		<div id="right_panel">
+			<div id="filters_top_panel"></div>
+			<div id="pointmod_bottom_panel" class="section">
+				<div class="container">
+					<input type="radio" name="group1" value="deaths" id="radio-1"> <label
+						for="radio-1"><span class="radio">Deaths</span></label>
+				</div>
+				<div class="container">
+					<input type="radio"  name="group1" value="seriousInjuries" id="radio-2"> <label
+						for="radio-2"><span class="radio">Serious injuries </span></label>
+				</div>
+				<div class="container">
+					<input type="radio"name="group1" value="minorInjuries" id="radio-3"> <label
+						for="radio-3"><span class="radio">Minor injuries</span></label>
+				</div>
+			</div>
+		</div>
 	</div>
-</div>
-<div id="bottom_div">
-	<div id="bottom_bar_chart"></div>
-	<div id="bottom_dropdown"></div>	
-</div>
+	<div id="bottom_div">
+		<div id="bottom_bar_chart"></div>
+		<div id="bottom_dropdown"></div>
+	</div>
 </body>
 
 <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
