--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -28,7 +28,9 @@
 	</div>
 	<div id="bottom_div">
 		<div id="bottom_bar_chart"></div>
-		<div id="bottom_dropdown"></div>
+		<div id="bottom_dropdown">
+			<select id="bottom_chart_options">	</select>
+		</div>
 	</div>
 </body>
 
@@ -40,6 +42,7 @@
 <script src="./d3_google_maps.js"></script>
 <script src="./d3_bottom_bar_chart.js"></script>
 <script src="./filter_panel.js"></script>
+<script src="./bottom_dropdown.js"></script>
 <script src="./pointmod_panel.js"></script>
 
 
