Added date text boxes

--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -30,6 +30,8 @@
 		<div id="bottom_bar_chart"></div>
 		<div id="bottom_dropdown">
 			<select id="bottom_chart_options">	</select>
+			<div id="maxDate"></div>
+			<div id="minDate"></div>			
 		</div>
 	</div>
 </body>
