Added first part (work in progress) of filtering module

--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -9,7 +9,12 @@
 	<div id="top_div">
 		<div id="main_map"></div>
 		<div id="right_panel">
-			<div id="filters_top_panel"></div>
+			<div id="filters_top_panel">
+				<select id="filter_variable_options"></select>
+				<button id="add_filter">Add</button>
+				<div id="filter_values_options"></div>
+				<table id  ="filters_table"></table>		
+			</div>
 			<div id="pointmod_bottom_panel" class="section">
 				<div class="container">
 					<input type="radio" name="group1" value="deaths" id="radio-1"> <label
