--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -48,6 +48,7 @@
 <script src="./data_filter.js"></script>
 <script src="./d3_google_maps.js"></script>
 <script src="./d3_bottom_bar_chart.js"></script>
+<script src="./filters.js"></script>
 <script src="./filter_panel.js"></script>
 <script src="./bottom_dropdown.js"></script>
 <script src="./pointmod_panel.js"></script>
