Added space for additional chart

--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -32,12 +32,15 @@
 		</div>
 	</div>
 	<div id="bottom_div">
+	<div id="bottom_div_left">
 		<div id="bottom_bar_chart"></div>
 		<div id="bottom_dropdown">
 			<select id="bottom_chart_options">	</select>
 			<div id="maxDate"></div>
 			<div id="minDate"></div>			
 		</div>
+	</div>
+	<div id="bottom_div_right"></div>
 	</div>
 </body>
 
