--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -17,16 +17,36 @@
 			</div>
 			<div id="pointmod_bottom_panel" class="section">
 				<div class="container">
-					<input type="radio" name="group1" value="deaths" id="radio-1"> <label
-						for="radio-1"><span class="radio">Deaths</span></label>
+					<input type="radio"name="group1" value="weekDay" id="radio-1"> <label
+						for="radio-1"><span class="radio">Week Day</span></label>
 				</div>
 				<div class="container">
-					<input type="radio"  name="group1" value="seriousInjuries" id="radio-2"> <label
-						for="radio-2"><span class="radio">Serious injuries </span></label>
+					<input type="radio"name="group1" value="dayPart" id="radio-2"> <label
+						for="radio-2"><span class="radio">Day Part</span></label>
 				</div>
 				<div class="container">
-					<input type="radio"name="group1" value="minorInjuries" id="radio-3"> <label
-						for="radio-3"><span class="radio">Minor injuries</span></label>
+					<input type="radio"name="group1" value="neighborhood" id="radio-3"> <label
+						for="radio-3"><span class="radio">Neighborhood</span></label>
+				</div>
+				<div class="container">
+					<input type="radio"name="group1" value="pedestrianCause" id="radio-4"> <label
+						for="radio-4"><span class="radio">Pedestrian Cause</span></label>
+				</div>
+				<div class="container">
+					<input type="radio" name="group1" value="deaths" id="radio-5"> <label
+						for="radio-5"><span class="radio">Number of deaths</span></label>
+				</div>
+				<div class="container">
+					<input type="radio"name="group1" value="minorInjuries" id="radio-6"> <label
+						for="radio-6"><span class="radio">Number of minor injuries</span></label>
+				</div>
+				<div class="container">
+					<input type="radio"  name="group1" value="seriousInjuries" id="radio-7"> <label
+						for="radio-7"><span class="radio">Number of serious injuries </span></label>
+				</div>				
+				<div class="container">
+					<input type="radio"name="group1" value="seriousnessIndex" id="radio-8"> <label
+						for="radio-8"><span class="radio">Seriousness Index</span></label>
 				</div>
 			</div>
 		</div>
