--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -74,6 +74,7 @@
 <script src="./filters.js"></script>
 <script src="./filter_panel.js"></script>
 <script src="./bottom_dropdown.js"></script>
+<script src="./d3_parallel_coord_chart.js"></script>
 <script src="./pointmod_panel.js"></script>
 
 
