--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -8,6 +8,7 @@
 <body>
 	<div id="top_div">
 		<div id="main_map"></div>
+		<div id="legend"><h3>Legend</h3></div>
 		<div id="right_panel">
 			<div id="filters_top_panel">
 				<select id="filter_variable_options"></select>
@@ -17,31 +18,31 @@
 			</div>
 			<div id="pointmod_bottom_panel" class="section">
 				<div class="container">
-					<input type="radio"name="group1" value="weekDay" id="radio-1"> <label
+					<input type="radio"name="group1" value="Week day" id="radio-1"> <label
 						for="radio-1"><span class="radio">Week Day</span></label>
 				</div>
 				<div class="container">
-					<input type="radio"name="group1" value="dayPart" id="radio-2"> <label
+					<input type="radio"name="group1" value="Day part" id="radio-2"> <label
 						for="radio-2"><span class="radio">Day Part</span></label>
 				</div>
 				<div class="container">
-					<input type="radio"name="group1" value="neighborhood" id="radio-3"> <label
+					<input type="radio"name="group1" value="Neighborhood" id="radio-3"> <label
 						for="radio-3"><span class="radio">Neighborhood</span></label>
 				</div>
 				<div class="container">
-					<input type="radio"name="group1" value="pedestrianCause" id="radio-4"> <label
+					<input type="radio"name="group1" value="Pedestrian cause" id="radio-4"> <label
 						for="radio-4"><span class="radio">Pedestrian Cause</span></label>
 				</div>
 				<div class="container">
-					<input type="radio" name="group1" value="deaths" id="radio-5"> <label
+					<input type="radio" name="group1" value="Deaths" id="radio-5"> <label
 						for="radio-5"><span class="radio">Number of deaths</span></label>
 				</div>
 				<div class="container">
-					<input type="radio"name="group1" value="minorInjuries" id="radio-6"> <label
+					<input type="radio"name="group1" value="Minor injuries" id="radio-6"> <label
 						for="radio-6"><span class="radio">Number of minor injuries</span></label>
 				</div>
 				<div class="container">
-					<input type="radio"  name="group1" value="seriousInjuries" id="radio-7"> <label
+					<input type="radio"  name="group1" value="Serious injuries" id="radio-7"> <label
 						for="radio-7"><span class="radio">Number of serious injuries </span></label>
 				</div>				
 				<div class="container">
@@ -76,7 +77,7 @@
 <script src="./bottom_dropdown.js"></script>
 <script src="./d3_parallel_coord_chart.js"></script>
 <script src="./pointmod_panel.js"></script>
-
+<script src="./legend.js"></script>
 
 
 </html>
