--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -17,38 +17,7 @@
 				<table id  ="filters_table"></table>		
 			</div>
 			<div id="pointmod_bottom_panel" class="section">
-				<div class="container">
-					<input type="radio"name="group1" value="Week day" id="radio-1"> <label
-						for="radio-1"><span class="radio">Week Day</span></label>
-				</div>
-				<div class="container">
-					<input type="radio"name="group1" value="Day part" id="radio-2"> <label
-						for="radio-2"><span class="radio">Day Part</span></label>
-				</div>
-				<div class="container">
-					<input type="radio"name="group1" value="Neighborhood" id="radio-3"> <label
-						for="radio-3"><span class="radio">Neighborhood</span></label>
-				</div>
-				<div class="container">
-					<input type="radio"name="group1" value="Pedestrian cause" id="radio-4"> <label
-						for="radio-4"><span class="radio">Pedestrian Cause</span></label>
-				</div>
-				<div class="container">
-					<input type="radio" name="group1" value="Deaths" id="radio-5"> <label
-						for="radio-5"><span class="radio">Number of deaths</span></label>
-				</div>
-				<div class="container">
-					<input type="radio"name="group1" value="Minor injuries" id="radio-6"> <label
-						for="radio-6"><span class="radio">Number of minor injuries</span></label>
-				</div>
-				<div class="container">
-					<input type="radio"  name="group1" value="Serious injuries" id="radio-7"> <label
-						for="radio-7"><span class="radio">Number of serious injuries </span></label>
-				</div>				
-				<div class="container">
-					<input type="radio"name="group1" value="seriousnessIndex" id="radio-8"> <label
-						for="radio-8"><span class="radio">Seriousness Index</span></label>
-				</div>
+				<select id="paint_color_options">	</select>
 			</div>
 		</div>
 	</div>
