1.Calçada-> calsada 2.vehicles involved 3.dropdown in map

--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -8,16 +8,14 @@
 <body>
 	<div id="top_div">
 		<div id="main_map"></div>
-		<div id="legend"><h3>Legend</h3></div>
+		<select id="paint_color_options"></select>
+		<div id="legend"></div>
 		<div id="right_panel">
 			<div id="filters_top_panel">
 				<select id="filter_variable_options"></select>
 				<button id="add_filter">Add</button>
 				<div id="filter_values_options"></div>
 				<table id  ="filters_table"></table>		
-			</div>
-			<div id="pointmod_bottom_panel" class="section">
-				<select id="paint_color_options">	</select>
 			</div>
 		</div>
 	</div>
