Synchronizing charts and adding total text box

--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -25,7 +25,8 @@
 		<div id="bottom_dropdown">
 			<select id="bottom_chart_options">	</select>
 			<div id="maxDate"></div>
-			<div id="minDate"></div>			
+			<div id="minDate"></div>
+			<div id="totalValue"></div>	
 		</div>
 	</div>
 	<div id="bottom_div_right"></div>
