--- a/WebContent/accidents_bcn.html
+++ b/WebContent/accidents_bcn.html
@@ -8,8 +8,9 @@
 <body>
 	<div id="top_div">
 		<div id="main_map"></div>
+		<div id="legend">
 		<select id="paint_color_options"></select>
-		<div id="legend"></div>
+		</div>
 		<div id="right_panel">
 			
 		</div>
@@ -30,7 +31,7 @@
 	<div id="bottom_div_right">
 		<div id="filters_top_panel">
 			<select id="filter_variable_options"></select>
-			<button id="add_filter">Add</button>
+			<button id="add_filter">Add filter</button>
 			<div id="filter_values_options"></div>	
 		</div>
 		<div id="table_container">
